--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
   <section id="welcome-section" class="relative w-full h-screen overflow-hidden">
 
-    <!-- BACKGROUND SHAPES (bottom layer) -->
+    <!-- Remove this block -->
     <div class="floating-shapes pointer-events-none">
       <div class="shape s1"></div>
       <div class="shape s2"></div>
       <div class="shape s3"></div>
       <div class="shape s4"></div>
     </div>
+
 
     <!-- TEXT + BUTTON (top layer) -->
     <div id="wel-txt">
