--- a/theme/curious.html
+++ b/theme/curious.html
@@ -1,135 +1,127 @@
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curious Emotion Theme 💡</title>
 <style>
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-
-  body {
-    height: 100vh;
+  /* 🌟 Curious Theme Background */
+  #curious-theme-container {
+    position: fixed;
+    inset: 0;
+    pointer-events: none;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #91e3fc, #74b7ff, #8873ff);
+    z-index: -1;
+    display: none;
+    background: linear-gradient(135deg, #4b9ee3, #517fdb, #d7c9ff);
     background-size: 300% 300%;
-    animation: curiousGradient 10s ease-in-out infinite;
-    position: relative;
+    animation: curiousBG 12s ease infinite;
   }
 
-  @keyframes curiousGradient {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+  @keyframes curiousBG {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
   }
 
-  /* h1 {
-    color: #ffffff;
-    font-size: clamp(2rem, 6vw, 3.5rem);
-    text-align: center;
-    text-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-    z-index: 10;
-    animation: fadeIn 2s ease-in-out forwards;
-  }
-
-  @keyframes fadeIn {
-    0% { opacity: 0; transform: scale(0.9); }
-    100% { opacity: 1; transform: scale(1); }
-  } */
-
-  /* 🫧 Floating thought bubbles */
-  .bubble {
+  /* Floating sparkles */
+  .curious-sparkle {
     position: absolute;
-    bottom: 0;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.171), rgba(182, 218, 230, 0.322));
+    width: 12px;
+    height: 12px;
+    background: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
-    box-shadow: 0 0 15px rgba(162, 216, 250, 0.094);
-    animation: floatUp 7s ease-in-out forwards;
+    filter: blur(2px);
+    animation: curiousFloat 8s ease-in-out forwards;
     opacity: 0.9;
   }
 
-  @keyframes floatUp {
-    0% { transform: translateY(0) scale(1); opacity: 0.9; }
-    50% { opacity: 1; }
-    100% { transform: translateY(-110vh) scale(1.2); opacity: 0; }
-  }
-
- 
-
-
-
-  /* Floating glowing question marks */
-  .emoji {
-    position: absolute;
-    bottom: 0;
-    color: #7b2ff7;
-    font-size: 2rem;
-    opacity: 0;
-    filter: drop-shadow(0 0 10px rgb(255, 255, 255));
-    animation: emojiFloat 6s ease-in-out forwards;
-  }
-
-  @keyframes emojiFloat {
+  @keyframes curiousFloat {
     0% {
-      transform: translateY(0) scale(1) rotate(0deg);
-      opacity: 0;
+      transform: translateY(0) scale(0.8);
+      opacity: 0.4;
     }
-    10% {
+
+    40% {
       opacity: 1;
-      transform: translateY(-20px) scale(1.2) rotate(10deg);
+      transform: translateY(-40vh) scale(1);
     }
-    50% {
-      opacity: 1;
-      transform: translateY(-50vh) scale(1.1) rotate(-10deg);
-    }
+
     100% {
       opacity: 0;
-      transform: translateY(-100vh) scale(0.9) rotate(15deg);
+      transform: translateY(-90vh) scale(1.2);
     }
   }
-  @media (max-width: 600px) {
-    h1 { font-size: 2rem; }
+
+  /* Floating light rings */
+  .curious-ring {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 50%;
+    animation: curiousRing 10s linear forwards;
+    opacity: 0.7;
+  }
+
+  @keyframes curiousRing {
+    0% {
+      transform: translateY(0) scale(0.7) rotate(0deg);
+      opacity: 0.4;
+    }
+
+    60% {
+      transform: translateY(-50vh) scale(1) rotate(180deg);
+      opacity: 1;
+    }
+
+    100% {
+      transform: translateY(-100vh) scale(1.3) rotate(360deg);
+      opacity: 0;
+    }
   }
 </style>
-</head>
-<body>
-  <!-- <h1>💡 Feeling Curious 🤔</h1> -->
 
-  <script>
-    function createBubble() {
-      const bubble = document.createElement("div");
-      bubble.classList.add("bubble");
-      const size = Math.random() * 60 + 30;
-      bubble.style.width = bubble.style.height = size + "px";
-      bubble.style.left = Math.random() * 100 + "vw";
-      bubble.style.animationDuration = (5 + Math.random() * 3) + "s";
-      document.body.appendChild(bubble);
-      setTimeout(() => bubble.remove(), 8000);
-    }
+<!-- ⭐ Theme container -->
+<div id="curious-theme-container"></div>
 
-    function createEmoji() {
-      const emoji = document.createElement("div");
-      emoji.classList.add("emoji");
-      const emojis = ["❔"]; 
-      emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
-      emoji.style.left = Math.random() * 100 + "vw";
-      emoji.style.animationDuration = (4 + Math.random() * 3) + "s";
-      document.body.appendChild(emoji);
-      setTimeout(() => emoji.remove(), 7000);
-    }
+<script>
+  let curiousInterval1, curiousInterval2;
 
-    window.onload = () => {
-      setInterval(createBubble, 700);
-      setInterval(createEmoji, 800);
-    };
-  </script>
-</body>
-</html>
+  function startTheme() {
+    const bg = document.getElementById("curious-theme-container");
+    bg.style.display = "block";
+
+    // Floating sparkles
+    curiousInterval1 = setInterval(() => {
+      const sp = document.createElement("div");
+      sp.classList.add("curious-sparkle");
+      sp.style.left = Math.random() * 100 + "vw";
+      sp.style.bottom = "-20px";
+      sp.style.animationDuration = (6 + Math.random() * 3) + "s";
+      bg.appendChild(sp);
+      setTimeout(() => sp.remove(), 10000);
+    }, 500);
+
+    // Floating rings
+    curiousInterval2 = setInterval(() => {
+      const ring = document.createElement("div");
+      ring.classList.add("curious-ring");
+      ring.style.left = Math.random() * 100 + "vw";
+      ring.style.bottom = "-30px";
+      ring.style.animationDuration = (7 + Math.random() * 4) + "s";
+      bg.appendChild(ring);
+      setTimeout(() => ring.remove(), 12000);
+    }, 900);
+  }
+
+  function stopTheme() {
+    const bg = document.getElementById("curious-theme-container");
+    bg.style.display = "none";
+    bg.innerHTML = "";
+    clearInterval(curiousInterval1);
+    clearInterval(curiousInterval2);
+  }
+</script>
